--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,50 @@
 version: '2'
 
 services:
+
+  # ----------------------
+  # The log viewer:
+  # ----------------------
   log-viewer:
     build: .
     ports:
      - "8000:8000"
+
+  # ----------------------
+  # Kafka to test against:
+  # ----------------------
+  kafka:
+    image: wurstmeister/kafka:1.1.0
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_ADVERTISED_HOST_NAME: kafka
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_LISTENERS: PLAINTEXT://:9092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_NUM_RECOVERY_THREADS_PER_DATA_DIR: 10
+      LOG_RETENTION_HOURS: -1
+      LOG_RETENTION_BYTES: -1
+      NUM_PARTITIONS: 16
+      KAFKA_CREATE_TOPICS: "fc.candidates:16:1 --config=compression.type=snappy,fc.tocrawl:16:1 --config=compression.type=snappy,fc.crawled:16:1 --config=compression.type=snappy,fc.discarded:16:1 --config=compression.type=snappy,fc.inscope:16:1 --config=compression.type=snappy"
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: 'false'
+      LOG4J_LOGGER_KAFKA: WARN
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    depends_on:
+      - zookeeper
+
+  # Needs a Zookeeper too
+  zookeeper:
+    image: wurstmeister/zookeeper
+    ports:
+     - "2181:2181"
+
+  # Kafka UI to peek in
+  kafka-ui:
+    image: ukwa/docker-trifecta
+    ports:
+      - "9000:9000"
+    environment:
+      - "ZK_HOST=zookeeper:2181"
+
