--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-certifi==2018.4.16
+certifi==2019.11.28
 chardet==3.0.4
-click==6.7
+Click==7.0
 Flask==1.1.1
-gunicorn==19.7.1
-idna==2.6
-itsdangerous==0.24
-Jinja2==2.10.1
+gunicorn==20.0.4
+idna==2.8
+itsdangerous==1.1.0
+Jinja2==2.10.3
 kafka-python==1.4.7
-MarkupSafe==1.0
+MarkupSafe==1.1.1
 mmh3==2.5.1
 python-snappy==0.5.4
-requests==2.20.0
-urllib3==1.24.2
-Werkzeug==0.15.3
+requests==2.22.0
+urllib3==1.25.7
+Werkzeug==0.16.0
