Made it simple to deploy under a SCRIPT_NAME prefix.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
   # ----------------------
   log-viewer:
     build: .
+    environment:
+     - "SCRIPT_NAME=/intranet/logs"
     ports:
      - "8000:8000"
 
